// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`closable prop 1`] = `
"<div>
  <transition-stub appear="false" persisted="false" css="true">
    <div class="transition-collapse-target">
      <div class="transition-collapse-target">
        <div class="relative overflow-hidden w-full rounded-(--ui-radius) p-4 items-center bg-(--ui-primary) text-(--ui-text-contrast) ui-alert__root ui-alert_primary">
          <div class="flex items-center">
            <!--v-if-->
            <div class="flex flex-col gap-1">
              <!--v-if-->
              <!--v-if-->
            </div>
            <div><button class="rounded-(--ui-radius) font-medium inline-flex items-center focus:outline-hidden disabled:cursor-not-allowed disabled:opacity-75 transition-colors cursor-pointer px-2.5 py-1.5 text-sm gap-1.5 ui-button absolute top-3 right-3 cursor-pointer ui-alert__close">
                <!---->
              </button></div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`color: error 1`] = `
"<div>
  <transition-stub appear="false" persisted="false" css="true">
    <div class="transition-collapse-target">
      <div class="transition-collapse-target">
        <div class="relative overflow-hidden w-full rounded-(--ui-radius) p-4 items-center bg-(--ui-error) text-(--ui-text-contrast) ui-alert__root ui-alert_error">
          <div class="flex items-center">
            <!--v-if-->
            <div class="flex flex-col gap-1">
              <div class="text-sm font-medium pe-6 ui-alert__title">custom title</div>
              <!--v-if-->
            </div>
            <div></div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`color: info 1`] = `
"<div>
  <transition-stub appear="false" persisted="false" css="true">
    <div class="transition-collapse-target">
      <div class="transition-collapse-target">
        <div class="relative overflow-hidden w-full rounded-(--ui-radius) p-4 items-center bg-(--ui-info) text-(--ui-text-contrast) ui-alert__root ui-alert_info">
          <div class="flex items-center">
            <!--v-if-->
            <div class="flex flex-col gap-1">
              <div class="text-sm font-medium pe-6 ui-alert__title">custom title</div>
              <!--v-if-->
            </div>
            <div></div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`color: primary 1`] = `
"<div>
  <transition-stub appear="false" persisted="false" css="true">
    <div class="transition-collapse-target">
      <div class="transition-collapse-target">
        <div class="relative overflow-hidden w-full rounded-(--ui-radius) p-4 items-center bg-(--ui-primary) text-(--ui-text-contrast) ui-alert__root ui-alert_primary">
          <div class="flex items-center">
            <!--v-if-->
            <div class="flex flex-col gap-1">
              <div class="text-sm font-medium pe-6 ui-alert__title">custom title</div>
              <!--v-if-->
            </div>
            <div></div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`color: secondary 1`] = `
"<div>
  <transition-stub appear="false" persisted="false" css="true">
    <div class="transition-collapse-target">
      <div class="transition-collapse-target">
        <div class="relative overflow-hidden w-full rounded-(--ui-radius) p-4 items-center bg-(--ui-secondary) text-(--ui-text-contrast) ui-alert__root ui-alert_secondary">
          <div class="flex items-center">
            <!--v-if-->
            <div class="flex flex-col gap-1">
              <div class="text-sm font-medium pe-6 ui-alert__title">custom title</div>
              <!--v-if-->
            </div>
            <div></div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`color: success 1`] = `
"<div>
  <transition-stub appear="false" persisted="false" css="true">
    <div class="transition-collapse-target">
      <div class="transition-collapse-target">
        <div class="relative overflow-hidden w-full rounded-(--ui-radius) p-4 items-center bg-(--ui-success) text-(--ui-text-contrast) ui-alert__root ui-alert_success">
          <div class="flex items-center">
            <!--v-if-->
            <div class="flex flex-col gap-1">
              <div class="text-sm font-medium pe-6 ui-alert__title">custom title</div>
              <!--v-if-->
            </div>
            <div></div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`color: warning 1`] = `
"<div>
  <transition-stub appear="false" persisted="false" css="true">
    <div class="transition-collapse-target">
      <div class="transition-collapse-target">
        <div class="relative overflow-hidden w-full rounded-(--ui-radius) p-4 items-center bg-(--ui-warning) text-(--ui-text-contrast) ui-alert__root ui-alert_warning">
          <div class="flex items-center">
            <!--v-if-->
            <div class="flex flex-col gap-1">
              <div class="text-sm font-medium pe-6 ui-alert__title">custom title</div>
              <!--v-if-->
            </div>
            <div></div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`overrideUi prop 1`] = `
"<div>
  <transition-stub appear="false" persisted="false" css="true">
    <div class="transition-collapse-target">
      <div class="transition-collapse-target">
        <div class="relative overflow-hidden w-full rounded-(--ui-radius) p-4 items-center bg-(--ui-primary) text-(--ui-text-contrast) override-root ui-alert__root ui-alert_primary">
          <div class="flex items-center override-wrapper">
            <!--v-if-->
            <div class="flex flex-col gap-1">
              <div class="text-sm font-medium pe-6 override-title ui-alert__title">custom title</div>
              <!--v-if-->
            </div>
            <div></div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`variant: outline 1`] = `
"<div>
  <transition-stub appear="false" persisted="false" css="true">
    <div class="transition-collapse-target">
      <div class="transition-collapse-target">
        <div class="relative overflow-hidden w-full rounded-(--ui-radius) p-4 items-center text-(--ui-primary) ring ring-inset ring-(--ui-primary)/25 ui-alert__root ui-alert_primary">
          <div class="flex items-center">
            <!--v-if-->
            <div class="flex flex-col gap-1">
              <div class="text-sm font-medium pe-6 ui-alert__title">custom title</div>
              <!--v-if-->
            </div>
            <div></div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`variant: soft 1`] = `
"<div>
  <transition-stub appear="false" persisted="false" css="true">
    <div class="transition-collapse-target">
      <div class="transition-collapse-target">
        <div class="relative overflow-hidden w-full rounded-(--ui-radius) p-4 items-center bg-(--ui-primary)/10 text-(--ui-primary) ui-alert__root ui-alert_primary">
          <div class="flex items-center">
            <!--v-if-->
            <div class="flex flex-col gap-1">
              <div class="text-sm font-medium pe-6 ui-alert__title">custom title</div>
              <!--v-if-->
            </div>
            <div></div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`variant: solid 1`] = `
"<div>
  <transition-stub appear="false" persisted="false" css="true">
    <div class="transition-collapse-target">
      <div class="transition-collapse-target">
        <div class="relative overflow-hidden w-full rounded-(--ui-radius) p-4 items-center bg-(--ui-primary) text-(--ui-text-contrast) ui-alert__root ui-alert_primary">
          <div class="flex items-center">
            <!--v-if-->
            <div class="flex flex-col gap-1">
              <div class="text-sm font-medium pe-6 ui-alert__title">custom title</div>
              <!--v-if-->
            </div>
            <div></div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`variant: subtle 1`] = `
"<div>
  <transition-stub appear="false" persisted="false" css="true">
    <div class="transition-collapse-target">
      <div class="transition-collapse-target">
        <div class="relative overflow-hidden w-full rounded-(--ui-radius) p-4 items-center bg-(--ui-primary)/10 text-(--ui-primary) ring ring-inset ring-(--ui-primary)/25 ui-alert__root ui-alert_primary">
          <div class="flex items-center">
            <!--v-if-->
            <div class="flex flex-col gap-1">
              <div class="text-sm font-medium pe-6 ui-alert__title">custom title</div>
              <!--v-if-->
            </div>
            <div></div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`with description 1`] = `
"<div>
  <transition-stub appear="false" persisted="false" css="true">
    <div class="transition-collapse-target">
      <div class="transition-collapse-target">
        <div class="relative overflow-hidden w-full rounded-(--ui-radius) p-4 items-center bg-(--ui-primary) text-(--ui-text-contrast) ui-alert__root ui-alert_primary">
          <div class="flex items-center">
            <!--v-if-->
            <div class="flex flex-col gap-1">
              <div class="text-sm font-medium pe-6 ui-alert__title">custom title</div>
              <div class="text-sm opacity-90 ui-alert__description">custom description</div>
            </div>
            <div></div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`with title 1`] = `
"<div>
  <transition-stub appear="false" persisted="false" css="true">
    <div class="transition-collapse-target">
      <div class="transition-collapse-target">
        <div class="relative overflow-hidden w-full rounded-(--ui-radius) p-4 items-center bg-(--ui-primary) text-(--ui-text-contrast) ui-alert__root ui-alert_primary">
          <div class="flex items-center">
            <!--v-if-->
            <div class="flex flex-col gap-1">
              <div class="text-sm font-medium pe-6 ui-alert__title">custom title</div>
              <!--v-if-->
            </div>
            <div></div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;
